--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
