--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "x": "^0.1.2"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
