--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
     "x": "^0.1.2"
   },
